deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubebeaver
  labels:
    app.kubernetes.io/name: kubebeaver
